# works

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: create_admin.py  ingest.py
core/migrations/: 0001_initial.py
works/: asgi.py  settings.py  urls.py  wsgi.py
